<resources>
    <string name="EEXIST">File exists</string>
    <string name="ENOENT">No such file or directory</string>
    <string name="ENOSPC">No space left on device</string>
    <string name="ENOTSUP">Operation not supported</string>
    <string name="EROFS">Read-only filesystem</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_benchmark">Benchmark</string>
    <string name="activity_encfs">EncFS</string>
    <string name="activity_settings">Settings</string>
    <string name="add_encfs">Add EncFS</string>
    <string name="add_image">Add image</string>
    <string name="add_tc_image">Add VeraCrypt image</string>
    <string name="algorithm">Algorithm</string>
    <string name="allow_empty_blocks">Allow empty blocks</string>
    <string name="allow_root_mounting">Allow root mounting</string>
    <string name="allow_root_mounting_confirm_text">Using root monitoring may not support some file systems (most often NTFS, ExFAT and BitLocker).\nUsing root can lead to unstable and unpredictable system behavior.\nYou expressly understand and agree that your use of the application is at your sole discretion and risk and that the application is provided as is and as available without warranty of any kind.\nYou are solely responsible for any damage to your mobile device, or other device, or loss of data that results from such use.</string>
    <string name="allow_root_not_found">Root support was not found on the device</string>
    <string name="allow_write_operation">Allow write operation</string>
    <string name="allow_write_operation_confirm_text">Writing operations may result in data loss or corruption.\nYou expressly understand and agree that your use of the application is at your sole discretion and risk and that the application is provided as is and as available without warranty of any kind.\nYou are solely responsible for any damage to your mobile device, or other device, or loss of data that results from such use.</string>
    <string name="allow_write_operation_confirm_title">Confirm</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_about">© 2020–2024 Ant-ON, &lt;support@zdevs.ru&gt;</string>
    <string name="app_desc">External Storage Devices</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">ZUGate</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_detect">Automatically</string>
    <string name="benchmark">Benchmark</string>
    <string name="benchmarking">Benchmarking…</string>
    <string name="biometric_verification">Biometric verification</string>
    <string name="block_size">Block size</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choouse_location">Choose a location for the new EncFS</string>
    <string name="cipher_name">Cipher</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="connect">Connect</string>
    <string name="connect_by_root">Connect by ROOT</string>
    <string name="connecting">Connecting…</string>
    <string name="copy">Copy</string>
    <string name="create">Create</string>
    <string name="create_encfs">Create EncFS</string>
    <string name="data_copied">Data copied</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="device_is_mounted">Device is mounted</string>
    <string name="disconnect">Disconnect</string>
    <string name="donate">Donate</string>
    <string name="donate_only">Donation required</string>
    <string name="empty_storage_list">USB devices are not connected and storage images are not added</string>
    <string name="enter_password">Enter password</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="execution">Execution…</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="external_storage">External storage</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fail_add_the">Failed to add the \'%s\'</string>
    <string name="fail_connecting_to">Failed to connect the \'%s\'</string>
    <string name="fail_decryption_the">Failed to decrypt the \'%s\'</string>
    <string name="fail_mount_the">Failed to mount the \'%s\'</string>
    <string name="fail_operation">Operation failed</string>
    <string name="fail_to_open_as_rw">Failed to open device as RW, use RO mode</string>
    <string name="file_name_encryption">File name encryption</string>
    <string name="file_name_iv_chaining">File name IV chaining</string>
    <string name="file_not_found">File not found</string>
    <string name="file_provider">File provider</string>
    <string name="fingerprint_dialog_touch_sensor">Touch the fingerprint sensor</string>
    <string name="fingerprint_error_hw_not_available">Fingerprint hardware not available.</string>
    <string name="fingerprint_error_hw_not_present">This device does not have a fingerprint sensor</string>
    <string name="fingerprint_error_lockout">Too many attempts. Please try again later.</string>
    <string name="fingerprint_error_no_fingerprints">No fingerprints enrolled.</string>
    <string name="fingerprint_error_user_canceled">Fingerprint operation canceled by user.</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
    <string name="fs_damaged">FS is damaged</string>
    <string name="gb">GB</string>
    <string name="generic_error_no_device_credential">No PIN, pattern, or password set.</string>
    <string name="generic_error_no_keyguard">This device does not support PIN, pattern, or password.</string>
    <string name="generic_error_user_canceled">Authentication canceled by user.</string>
    <string name="getting_information">Getting information…</string>
    <string name="kdf_iterations">PBKDF2 iterations</string>
    <string name="key_size">Key size</string>
    <string name="location">Location</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="select_location">Select</string>
    <string name="unique_iv">Unique IV for each file</string>
</resources>