<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:padding="6dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:id="@+id/location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/location" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:textColor="?android:attr/textColorPrimary" android:id="@+id/location_path" android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/location"/>
        <Button android:id="@+id/location_select" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/select_location" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/location_path" style="@style/Widget.Material3.Button.TonalButton"/>
        <TextView android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:id="@+id/algorithm_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/algorithm" android:labelFor="@+id/algorithm" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/location_select"/>
        <Spinner android:entries="@array/algorithm_list" android:id="@+id/algorithm" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/algorithm_label"/>
        <TextView android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:id="@+id/block_size_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/block_size" android:labelFor="@+id/block_size" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/algorithm"/>
        <Spinner android:entries="@array/block_size_list" android:id="@+id/block_size" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/block_size_label"/>
        <TextView android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:id="@+id/key_size_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/key_size" android:labelFor="@+id/key_size" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/block_size"/>
        <Spinner android:entries="@array/key_size_list" android:id="@+id/key_size" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/key_size_label"/>
        <TextView android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:id="@+id/filename_encoding_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/file_name_encryption" android:labelFor="@+id/filename_encoding" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/key_size"/>
        <Spinner android:entries="@array/filename_encoding_list" android:id="@+id/filename_encoding" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/filename_encoding_label"/>
        <CheckBox android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:id="@+id/unique_iv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unique_iv" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/filename_encoding"/>
        <CheckBox android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:id="@+id/filename_iv_chaining" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/file_name_iv_chaining" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/unique_iv"/>
        <CheckBox android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:id="@+id/allow_empty_blocks" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/allow_empty_blocks" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/filename_iv_chaining"/>
        <TextView android:textAppearance="@style/TextAppearance.Material3.BodyMedium" android:id="@+id/kdf_iterations_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kdf_iterations" android:labelFor="@+id/kdf_iterations" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/allow_empty_blocks"/>
        <EditText android:id="@+id/kdf_iterations" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="100000" android:ems="10" android:inputType="numberDecimal" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/kdf_iterations_label"/>
        <ru.zdevs.zugate.widget.EditPassword android:id="@+id/password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_password" android:ems="10" android:inputType="textPassword" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/kdf_iterations"/>
        <ru.zdevs.zugate.widget.EditPassword android:id="@+id/password_confirm" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/reenter_password" android:ems="10" android:inputType="textPassword" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/password"/>
        <Button android:id="@+id/create" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/create" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/password_confirm"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
